# HytaleModInstaller

./: README.md  pyproject.toml
src/HytaleModInstaller/: cli.py  config.py  watcher.py
