[project]
name = "hytalemodinstaller"
version = "1.0.1"
description = "A python tool and service to automate Hytale mod installation on Linux"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.5.1",
    "watchdog>=6.0.0",
]

[project.scripts]
hytalemodinstaller = "HytaleModInstaller.cli:main"